feat(#3400): generate only es6 -> implement, but not tested on libraries

--- a/support/chez/Makefile
+++ b/support/chez/Makefile
@@ -24,7 +24,7 @@ support-sep.ss: support.ss
 	echo ") (import (chezscheme))" >> $@
 
 	# copy the code
-	cat $< >> $@
+	sed '1{/^#!/d;}' $< >> $@
 
 	# close the bracket
 	echo ") ; end of (library)" >> $@
