feat(idris-lang#3400): generate only es6 -> implement

--- a/support/Makefile
+++ b/support/Makefile
@@ -26,9 +26,9 @@ clean-refc:
 clean-chez:
 	@${MAKE} -C chez clean
 
-.PHONY: install install-docs install-racket install-gambit install-js install-c install-refc install-chez
+.PHONY: install install-docs install-racket install-gambit install-js install-node install-c install-refc install-chez
 
-install: install-docs install-racket install-gambit install-js install-c install-refc install-chez
+install: install-docs install-racket install-gambit install-js install-node install-c install-refc install-chez
 
 install-docs:
 	mkdir -p ${DESTDIR}${PREFIX}/${NAME_VERSION}/support/docs
@@ -45,6 +45,10 @@ install-gambit:
 install-js:
 	mkdir -p ${DESTDIR}${PREFIX}/${NAME_VERSION}/support/js
 	install -m 644 js/* ${DESTDIR}${PREFIX}/${NAME_VERSION}/support/js
+
+install-node:
+	mkdir -p ${DESTDIR}${PREFIX}/${NAME_VERSION}/support/node
+	install -m 644 node/* ${DESTDIR}${PREFIX}/${NAME_VERSION}/support/node
 
 install-c:
 	@${MAKE} -C c install
