--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,1 +1,40 @@
-sphinx_rtd_theme
+accessible-pygments==0.0.5
+alabaster==1.0.0
+babel==2.17.0
+beautifulsoup4==4.14.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+docutils==0.21.2
+idna==3.11
+imagesize==1.4.1
+jinja2==3.1.6
+latexcodec==3.0.1
+markdown-it-py==3.0.0
+markupsafe==3.0.3
+mdit-py-plugins==0.5.0
+mdurl==0.1.2
+myst-parser==4.0.1
+packaging==25.0
+pybtex==0.25.1
+pybtex-docutils==1.0.3
+pydata-sphinx-theme==0.15.4
+pygments==2.19.2
+pyyaml==6.0.3
+requests==2.32.5
+snowballstemmer==3.0.1
+soupsieve==2.8
+sphinx==8.1.3
+sphinx-book-theme==1.1.4
+sphinx-copybutton==0.5.2
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-bibtex==2.6.5
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+tomli==2.3.0
+typing-extensions==4.15.0
+urllib3==2.5.0
